@@ -1,3 +1,8 @@
+1999-08-25  Matt Wilson  <msw@redhat.com>
+
+	* gtkmodule.c (_wrap_gdk_char_width): added wrapper for gdk_char_width
+	* gtk.py (gdk_char_width): added wrapper for gdk_char_width
+
 1999-08-09  James Henstridge  <james@daa.com.au>
 
 	* pygtk.spec: updated spec file, and added subpackages pygtk-glarea
